testdata/baselines/reference/effect-v4/missingEffectContext_sugg.errors.txt
=== Metadata ===
Effect version: 4.0.0-beta.27

/.src/missingEffectContext_sugg.ts(40,5): error TS2345: Argument of type '<A, E>(effect: Effect<A, E, never>, options?: RunOptions | undefined) => Promise<A>' is not assignable to parameter of type '(_: Effect<{}, never, Cache>) => Promise<{}>'.
/.src/missingEffectContext_sugg.ts(40,5): error TS377004: Missing context Cache in the expected Effect type. effect(missingEffectContext)


==== /.src/missingEffectContext_sugg.ts (2 errors) ====
    import { Effect, Layer, ServiceMap, Data } from "effect"
    
    export class DbConnection extends ServiceMap.Service<DbConnection>()("DbConnection", {
      make: Effect.succeed({})
    }) {
      static Default = Layer.effect(this, this.make)
    }
    
    export class FileSystem extends ServiceMap.Service<FileSystem>()("FileSystem", {
      make: Effect.succeed({})
    }) {
      static Default = Layer.effect(this, this.make)
    }
    
    export class Cache extends ServiceMap.Service<Cache>()("Cache", {
      make: Effect.as(FileSystem.asEffect(), {})
    }) {
      static Default = Layer.effect(this, this.make)
    }
    
    export class UserRepository extends ServiceMap.Service<UserRepository>()("UserRepository", {
      make: Effect.as(Effect.andThen(DbConnection.asEffect(), Cache.asEffect()), {})
    }) {
      static Default = Layer.effect(this, this.make)
    }
    
    export const liveWithPipeable = UserRepository.Default.pipe(
      Layer.provide(Cache.Default),
      Layer.merge(DbConnection.Default)
    )
    
    const program = Effect.gen(function*(){
        const cache = yield* Cache
        yield* Effect.addFinalizer(() => Effect.log("Finalizing cache"))
        return cache
    })
    
    program.pipe(
        Effect.scoped,
        Effect.runPromise
        ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '<A, E>(effect: Effect<A, E, never>, options?: RunOptions | undefined) => Promise<A>' is not assignable to parameter of type '(_: Effect<{}, never, Cache>) => Promise<{}>'.
        ~~~~~~~~~~~~~~~~~
!!! error TS377004: Missing context Cache in the expected Effect type. effect(missingEffectContext)
    )
